--- a/home-app/src/components/common/Button.module.css
+++ b/home-app/src/components/common/Button.module.css
@@ -1,8 +1,6 @@
-/* src/components/common/Button.module.css */
-
 .button {
     padding: 10px 16px;
-    background-color: #16a1b9; /* Örnek mavi ton */
+    background-color: #16a1b9; 
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -11,7 +9,7 @@
   }
   
   .button:hover {
-    background-color: #0d616f; /* Hover için daha koyu mavi */
+    background-color: #0d616f; 
   }
   
   .button:disabled {
